--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="https://nea.gov.sg">Link to NEA's website</a>
     <p>If you have time, here are some other cool apps from TechUp</p>
     <a href="https://techup.live">Check out past apps</a>
+    <p>What about problem statements</p>
 </body>
 </html>
