--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my blog</h1> 
-    <h4>Today is a rainy day</h4>  
-    <p>How to tell if it is raining? See the link below!</p> 
-    <a href="https://nea.gov.sg">Link to NEA's website</a>
-    <p>If you have time, here are some other cool apps from TechUp</p>
-    <a href="https://techup.live">Check out past apps</a>
-    <p>What about problem statements</p>
+    <h1 class="title">Welcome to my blog</h1>
+    <h3 class="title" id="important">Written by Preshant</h3>
+    <h3>Date: 1 Jan 2024</h3>
 </body>
 </html>
